<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="@dimen/card_view_height"
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_margin="@dimen/space_small">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:gravity="center"
        android:id="@+id/car_image_layout"
        android:padding="@dimen/space_large"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/carImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/car" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="@dimen/space_large"
        android:layout_toRightOf="@+id/car_image_layout"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"/>

        <TextView
            android:id="@+id/exterior"
            android:layout_below="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exterior" />

        <TextView
            android:id="@+id/engineType"
            android:layout_below="@+id/exterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/engine_type"/>
        <TextView
            android:id="@+id/fuel"
            android:layout_below="@+id/engineType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuel"/>
        <TextView
            android:id="@+id/interior"
            android:layout_below="@+id/fuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interior"/>
        <TextView
            android:id="@+id/name"
            android:layout_below="@+id/interior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <TextView
            android:id="@+id/vin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vin"
            android:layout_below="@+id/name"/>
    </RelativeLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>